--- a/roster.html
+++ b/roster.html
@@ -184,14 +184,11 @@ B3 ROSTER
 
 <b>Status</b> -     Draft
              Pending Confirmation 
-          <b><mark>>> Final <<</mark></b>
+             Final 
+          <b><mark>>> Holidays <<</mark></b> 
              <!-- ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #5 (Tue 22/12, 16:38)   Changes for Wed
-             #4 (Sun 20/12, 18:39)   [Final]<span id = "paraChangelog" style = "display:none"></span>
-             #3 (Sun 20/12, 15:14)   Draft #2
-             #2 (Sun 20/12, 10:35)   [Pending Confirmation]
-             #1 (Sat 19/12, 07:26)   Draft #1</span>
+<b>Changelog</b> -  #1 (Tue 29/12, 11:45)   Holidays !!</span>
 <!-- ABOVE.. col: 14 #x, 38 [x] --><span id = "mydivChangelog" style = "cursor:hand;color:royalblue" onclick = "expandContractChangelog();">             [+]</span>
 
 <b>Photos</b> -     <a href="https://www.flickr.com/gp/131712031@N02/Ft83xa">2014</a>, <a href="https://www.flickr.com/gp/131712031@N02/C314Q0">2015</a>, <a href="https://www.flickr.com/gp/131712031@N02/vtX8i9" target="_blank">2016</a>, <!--<a href="https://flic.kr/s/aHskUctFbt" target="_blank">2017</a>--><a href="https://unit-zero.myDS.me/photo/?t=Albums/album_62332032303137#Albums/album_62332032303137" target="_blank"><b>2017</b></a>, <a href="https://unit-zero.myDS.me/photo/?t=Albums/album_62332032303138#Albums/album_62332032303138" target="_blank"><b>2018</b></a>, <a href="https://unit-zero.myDS.me:5001/mo/sharing/BjnSIvuRa" target="_blank"><b>2019</b></a><span id="LastUpdatePhotos">(checking...)</span>
@@ -324,26 +321,6 @@ Bea:    Monday  CP % 0730-0900|1.5 ->
 |                                                                     |
 |=====================================================================|
 -->
-Bea:  @ Wed CP 1030-1500 (4.5)
-Sean: & Wed LC 0700-1430 (7.5)
-|=====================================================================|
-| For week starting    Mon   21/12/2020                               |
-|=====================================================================|
-| Pos   Time           Mon       Tue       Wed       Thu      Fri     |
-|---------------------------------------------------------------------|
-|=====================================================================|
-|       CP                                                            |
-| a    0730-1530|      Nere      Nere      Nere      /        /       |
-| b    0730-1430|7.0   Millie    Millie    Millie    /        /       |
-| @    1030-1500|      /         /         Bea@      /        /       |
-|                                                                     |
-|       LC                                                            |
-| c    0630-1500|      Mony      Mony      Mony      /        /       |
-| d    0700-1130|4.5   Sean      Sean      /         /        /       |
-| e    0900-1500|6.0   Bea       Bea       Sean&     /        /       |
-|                                                                     |
-|=====================================================================|
-
 // First day of Christmas break: <b>Thursday 24 Dec 2020</b>
 //  Closed For week starting Monday 28/12/2020 
 // First day of re-opening 2021: <b>Monday 04 Jan, 2021</b>
