--- a/roster.html
+++ b/roster.html
@@ -182,13 +182,12 @@ alt="shopify traffic stats"></a></div></noscript>
 
 B3 ROSTER
 
-<b>Status</b> -     Draft
+<b>Status</b> -  <b><mark>>> Draft <<</mark></b> 
              Pending Confirmation 
              Final 
-          <b><mark>>> Holidays <<</mark></b> 
              <!-- ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #1 (Tue 29/12, 11:45)   Holidays !!</span>
+<b>Changelog</b> -  #1 (Sat 02/01, 12:10)   Draft #1</span>
 <!-- ABOVE.. col: 14 #x, 38 [x] --><span id = "mydivChangelog" style = "cursor:hand;color:royalblue" onclick = "expandContractChangelog();">             [+]</span>
 
 <b>Photos</b> -     <a href="https://www.flickr.com/gp/131712031@N02/Ft83xa">2014</a>, <a href="https://www.flickr.com/gp/131712031@N02/C314Q0">2015</a>, <a href="https://www.flickr.com/gp/131712031@N02/vtX8i9" target="_blank">2016</a>, <!--<a href="https://flic.kr/s/aHskUctFbt" target="_blank">2017</a>--><a href="https://unit-zero.myDS.me/photo/?t=Albums/album_62332032303137#Albums/album_62332032303137" target="_blank"><b>2017</b></a>, <a href="https://unit-zero.myDS.me/photo/?t=Albums/album_62332032303138#Albums/album_62332032303138" target="_blank"><b>2018</b></a>, <a href="https://unit-zero.myDS.me:5001/mo/sharing/BjnSIvuRa" target="_blank"><b>2019</b></a><span id="LastUpdatePhotos">(checking...)</span>
@@ -319,29 +318,9 @@ Bea:    Monday  CP % 0730-0900|1.5 ->
 |                                                                     |
 |=====================================================================|
 -->
-// First day of Christmas break: <b>Thursday 24 Dec 2020</b>
-//  Closed For week starting Monday 28/12/2020 
-// First day of re-opening 2021: <b>Monday 04 Jan, 2021</b>
-<p style="color:#c9c9c9;">
+Note: A lot less tradies this week, back to normal next week
 |=====================================================================|
-| For week starting    Mon   28/12/2020    Closed for Christmas       |
-|=====================================================================|
-| Pos   Time           Mon       Tue       Wed       Thu      Fri     |
-|---------------------------------------------------------------------|
-|=====================================================================|
-|       CP                                                            |
-| a    0730-1530|      /         /         /         /        /       |
-| b    0730-1430|7.0   /         /         /         /        /       |
-|                                                                     |
-|       LC                                                            |
-| c    0630-1500|      /         /         /         /        /       |
-| d    0700-1130|4.5   /         /         /         /        /       |
-| e    0900-1500|6.0   /         /         /         /        /       |
-|                                                                     |
-|=====================================================================|
-</p>
-|=====================================================================|
-| For week starting    Mon   04/01/2021    DRAFT                      |
+| For week starting    Mon   04/01/2021                               |
 |=====================================================================|
 | Pos   Time           Mon       Tue       Wed       Thu      Fri     |
 |---------------------------------------------------------------------|
@@ -349,11 +328,29 @@ Bea:    Monday  CP % 0730-0900|1.5 ->
 |       CP                                                            |
 | a    0730-1530|      Nere      Nere      Nere      Nere     Nere    |
 | b    0730-1430|7.0   Millie    Millie    Millie    Sean     Millie  |
+| c    1030-1430|4.0   Bea       Sean      Bea       Bea      Sean    |
 |                                                                     |
 |       LC                                                            |
-| c    0630-1500|      Mony      Mony      Mony      Mony     Mony    |
-| d    0700-1130|4.5   Sean      Sean      Sean      Bea      Bea     |
-| e    0900-1500|6.0   Bea       Bea       Bea       Yui      Sean    |
+| d    0630-1500|      Mony      Mony      Mony      Mony     Mony    |
+| e    0700-1430|7.5   Sean      Bea       Sean      Yui      Bea     |
+|                                                                     |
+|=====================================================================|
+
+
+|=====================================================================|
+| For week starting    Mon   11/01/2021    DRAFT                      |
+|=====================================================================|
+| Pos   Time           Mon       Tue       Wed       Thu      Fri     |
+|---------------------------------------------------------------------|
+|=====================================================================|
+|       CP                                                            |
+| a    0730-1530|      Nere      Nere      Nere      Nere     Nere    |
+| b    0730-1430|7.0   Millie    Millie    Millie    Sean     Millie  |
+| c    1030-1430|4.0   Bea       Sean      Bea       Bea      Sean    |
+|                                                                     |
+|       LC                                                            |
+| d    0630-1500|      Mony      Mony      Mony      Mony     Mony    |
+| e    0700-1430|7.5   Sean      Bea       Sean      Yui      Bea     |
 |                                                                     |
 |=====================================================================|
 
