--- a/roster.html
+++ b/roster.html
@@ -182,12 +182,13 @@ alt="shopify traffic stats"></a></div></noscript>
 
 B3 ROSTER
 
-<b>Status</b> -  <b><mark>>> Draft <<</mark></b> 
-             Pending Confirmation 
+<b>Status</b> -     Draft 
+          <b><mark>>> Pending Confirmation <<</mark></b>
              Final 
              <!-- ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #1 (Sat 02/01, 12:10)   Draft #1</span>
+<b>Changelog</b> -  #2 (Sun 02/01, 17:14)   Draft #2
+             #1 (Sat 02/01, 12:10)   Draft #1</span>
 <!-- ABOVE.. col: 14 #x, 38 [x] --><span id = "mydivChangelog" style = "cursor:hand;color:royalblue" onclick = "expandContractChangelog();">             [+]</span>
 
 <b>Photos</b> -     <a href="https://www.flickr.com/gp/131712031@N02/Ft83xa">2014</a>, <a href="https://www.flickr.com/gp/131712031@N02/C314Q0">2015</a>, <a href="https://www.flickr.com/gp/131712031@N02/vtX8i9" target="_blank">2016</a>, <!--<a href="https://flic.kr/s/aHskUctFbt" target="_blank">2017</a>--><a href="https://unit-zero.myDS.me/photo/?t=Albums/album_62332032303137#Albums/album_62332032303137" target="_blank"><b>2017</b></a>, <a href="https://unit-zero.myDS.me/photo/?t=Albums/album_62332032303138#Albums/album_62332032303138" target="_blank"><b>2018</b></a>, <a href="https://unit-zero.myDS.me:5001/mo/sharing/BjnSIvuRa" target="_blank"><b>2019</b></a><span id="LastUpdatePhotos">(checking...)</span>
@@ -327,12 +328,12 @@ Note: A lot less tradies this week, back to normal next week
 |=====================================================================|
 |       CP                                                            |
 | a    0730-1530|      Nere      Nere      Nere      Nere     Nere    |
-| b    0730-1430|7.0   Millie    Millie    Millie    Sean     Millie  |
-| c    1030-1430|4.0   Bea       Sean      Bea       Bea      Sean    |
+| b    0730-1430|7.0   Millie    Millie    Millie    Bea      Millie  |
+| c    1030-1530|5.0   Sean      Bea       Bea       Lucy     Sean    |
 |                                                                     |
 |       LC                                                            |
 | d    0630-1500|      Mony      Mony      Mony      Mony     Mony    |
-| e    0700-1430|7.5   Sean      Bea       Sean      Yui      Bea     |
+| e    0700-1430|7.5   Yui       Sean      Sean      Yui      Bea     |
 |                                                                     |
 |=====================================================================|
 
@@ -345,12 +346,12 @@ Note: A lot less tradies this week, back to normal next week
 |=====================================================================|
 |       CP                                                            |
 | a    0730-1530|      Nere      Nere      Nere      Nere     Nere    |
-| b    0730-1430|7.0   Millie    Millie    Millie    Sean     Millie  |
-| c    1030-1430|4.0   Bea       Sean      Bea       Bea      Sean    |
+| b    0730-1430|7.0   Millie    Millie    Millie    Bea      Millie  |
+| c    1030-1530|5.0   Sean      Bea       Bea       Lucy     Sean    |
 |                                                                     |
 |       LC                                                            |
 | d    0630-1500|      Mony      Mony      Mony      Mony     Mony    |
-| e    0700-1430|7.5   Sean      Bea       Sean      Yui      Bea     |
+| e    0700-1430|7.5   Yui       Sean      Sean      Yui      Bea     |
 |                                                                     |
 |=====================================================================|
 
