--- a/roster.html
+++ b/roster.html
@@ -187,8 +187,9 @@ B3 ROSTER
           <b><mark>>> Final <<</mark></b> 
              <!-- ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #4 (Sun 02/01, 19:38)   [Final]<span id = "paraChangelog" style = "display:none">
-             #2 (Sun 02/01, 17:14)   Draft #2
+<b>Changelog</b> -  #4 (Tue 04/01, 18:00)   Changes due to quiet week..
+             #3 (Sun 03/01, 19:38)   [Final]<span id = "paraChangelog" style = "display:none">
+             #2 (Sun 03/01, 17:14)   Draft #2
              #1 (Sat 02/01, 12:10)   Draft #1</span>
 <!-- ABOVE.. col: 14 #x, 38 [x] --><span id = "mydivChangelog" style = "cursor:hand;color:royalblue" onclick = "expandContractChangelog();">             [+]</span>
 
@@ -319,8 +320,6 @@ Bea:    Monday  CP % 0730-0900|1.5 ->
 | e    0900-1500|6.0   Bea%      Bea       Bea       Yui      Sean    |
 |                                                                     |
 |=====================================================================|
--->
-Note: A lot less tradies this week, back to normal next week
 |=====================================================================|
 | For week starting    Mon   04/01/2021                               |
 |=====================================================================|
@@ -335,6 +334,27 @@ Note: A lot less tradies this week, back to normal next week
 |       LC                                                            |
 | d    0630-1500|      Mony      Mony      Mony      Mony     Mony    |
 | e    0700-1430|7.5   Yui       Sean      Sean      Yui      Bea     |
+|                                                                     |
+|=====================================================================|
+-->
+Note: A lot less tradies this week, back to normal next week
+
+Sean/Bea: Thu &  Sean |CP 0730-1130 (4.0) 
+                 Bea  |CP 1130-1530 (4.0)
+|=====================================================================|
+| For week starting    Mon   04/01/2021                               |
+|=====================================================================|
+| Pos   Time           Mon       Tue       Wed       Thu      Fri     |
+|---------------------------------------------------------------------|
+|=====================================================================|
+|       CP                                                            |
+| a    0730-1530|      Nere      Nere      Nere      Nere     Nere    |
+| b    0730-1430|8.0   Millie    Millie    Millie  Sean/Bea&  Sean    |
+| c    1030-1530|5.0   Sean      Bea       /         /        /       |
+|                                                                     |
+|       LC                                                            |
+| d    0630-1500|      Mony      Mony      Mony      Mony     Mony    |
+| e    0700-1430|7.5   Yui       Sean      Bea       Yui      Bea     |
 |                                                                     |
 |=====================================================================|
 
