--- a/roster.html
+++ b/roster.html
@@ -182,15 +182,13 @@ alt="shopify traffic stats"></a></div></noscript>
 
 B3 ROSTER
 
-<b>Status</b> -     Draft 
-             Pending Confirmation
-          <b><mark>>> Final <<</mark></b> 
+<b>Status</b> -     Draft  
+          <b><mark>>> Pending Confirmation <<</mark></b>
+             Final
              <!-- ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #4 (Tue 04/01, 18:00)   Changes due to quiet week..
-             #3 (Sun 03/01, 19:38)   [Final]<span id = "paraChangelog" style = "display:none">
-             #2 (Sun 03/01, 17:14)   Draft #2
-             #1 (Sat 02/01, 12:10)   Draft #1</span>
+<b>Changelog</b> -  #1 (Sun 10/01, 13:19)   [Pending Confirmation]
+                                             Draft #1</span>
 <!-- ABOVE.. col: 14 #x, 38 [x] --><span id = "mydivChangelog" style = "cursor:hand;color:royalblue" onclick = "expandContractChangelog();">             [+]</span>
 
 <b>Photos</b> -     <a href="https://www.flickr.com/gp/131712031@N02/Ft83xa">2014</a>, <a href="https://www.flickr.com/gp/131712031@N02/C314Q0">2015</a>, <a href="https://www.flickr.com/gp/131712031@N02/vtX8i9" target="_blank">2016</a>, <!--<a href="https://flic.kr/s/aHskUctFbt" target="_blank">2017</a>--><a href="https://unit-zero.myDS.me/photo/?t=Albums/album_62332032303137#Albums/album_62332032303137" target="_blank"><b>2017</b></a>, <a href="https://unit-zero.myDS.me/photo/?t=Albums/album_62332032303138#Albums/album_62332032303138" target="_blank"><b>2018</b></a>, <a href="https://unit-zero.myDS.me:5001/mo/sharing/BjnSIvuRa" target="_blank"><b>2019</b></a><span id="LastUpdatePhotos">(checking...)</span>
@@ -337,30 +335,29 @@ Bea:    Monday  CP % 0730-0900|1.5 ->
 |                                                                     |
 |=====================================================================|
 -->
-Note: A lot less tradies this week, back to normal next week
+Note: Tradies return on Wed, and office people also has been pushed 
+      back. We will have to check every day
 
-Sean/Bea: Thu &  Sean |CP 0730-1130 (4.0) 
-                 Bea  |CP 1130-1530 (4.0)
 |=====================================================================|
-| For week starting    Mon   04/01/2021                               |
+| For week starting    Mon   11/01/2021                               |
 |=====================================================================|
 | Pos   Time           Mon       Tue       Wed       Thu      Fri     |
 |---------------------------------------------------------------------|
 |=====================================================================|
 |       CP                                                            |
 | a    0730-1530|      Nere      Nere      Nere      Nere     Nere    |
-| b    0730-1430|8.0   Millie    Millie    Millie  Sean/Bea&  Sean    |
-| c    1030-1530|5.0   Sean      Bea       /         /        /       |
+| b    0730-1530|8.0   Millie    Millie    Millie    Bea      Sean    |
+| c    1030-1530|5.0   /         /         /         /        /       |
 |                                                                     |
 |       LC                                                            |
 | d    0630-1500|      Mony      Mony      Mony      Mony     Mony    |
-| e    0700-1430|7.5   Yui       Sean      Bea       Yui      Bea     |
+| e    0700-1430|7.5   Sean      Yui       Bea       Sean     Bea     |
 |                                                                     |
 |=====================================================================|
 
 
 |=====================================================================|
-| For week starting    Mon   11/01/2021    DRAFT                      |
+| For week starting    Mon   18/01/2021    DRAFT                      |
 |=====================================================================|
 | Pos   Time           Mon       Tue       Wed       Thu      Fri     |
 |---------------------------------------------------------------------|
