--- a/roster.html
+++ b/roster.html
@@ -351,7 +351,7 @@ Note: Tradies return on Wed, and office people also has been pushed
 |                                                                     |
 |       LC                                                            |
 | d    0630-1500|      Mony      Mony      Mony      Mony     Mony    |
-| e    0700-1430|7.5   Sean      Yui       Bea       Sean     Bea     |
+| e    0700-1430|7.5   Sean      Bea       Yui       Sean     Bea     |
 |                                                                     |
 |=====================================================================|
 
