--- a/roster.html
+++ b/roster.html
@@ -364,14 +364,15 @@ Note: Tradies return on Wed, and office people also has been pushed
 |=====================================================================|
 |       CP                                                            |
 | a    0730-1530|      Nere      Nere      Nere      Nere     Nere    |
-| b    0730-1430|7.0   Millie    Millie    Millie    Bea      Millie  |
-| c    1030-1530|5.0   Sean      Bea       Bea       Lucy     Sean    |
+| b    0730-1530|8.0   Millie    Millie    Millie    Bea      Sean    |
+| c    1030-1530|5.0   /         /         /         /        /       |
 |                                                                     |
 |       LC                                                            |
 | d    0630-1500|      Mony      Mony      Mony      Mony     Mony    |
-| e    0700-1430|7.5   Yui       Sean      Sean      Yui      Bea     |
+| e    0700-1430|7.5   Sean      Bea       Yui       Sean     Bea     |
 |                                                                     |
 |=====================================================================|
+
 
 
 </em>
