--- a/roster.html
+++ b/roster.html
@@ -183,11 +183,12 @@ alt="shopify traffic stats"></a></div></noscript>
 B3 ROSTER
 
 <b>Status</b> -     Draft  
-          <b><mark>>> Pending Confirmation <<</mark></b>
-             Final
+             Pending Confirmation
+          <b><mark>>> Final <<</mark></b>
              <!-- ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #1 (Sun 10/01, 13:19)   [Pending Confirmation]
+<b>Changelog</b> -  #2 (Sun 10/01, 14:28)   [Final]<span id = "paraChangelog" style = "display:none"></span>
+                    #1 (Sun 10/01, 13:19)   [Pending Confirmation]
                                              Draft #1</span>
 <!-- ABOVE.. col: 14 #x, 38 [x] --><span id = "mydivChangelog" style = "cursor:hand;color:royalblue" onclick = "expandContractChangelog();">             [+]</span>
 
@@ -336,7 +337,7 @@ Bea:    Monday  CP % 0730-0900|1.5 ->
 |=====================================================================|
 -->
 Note: Tradies return on Wed, and office people also has been pushed 
-      back. We will have to check every day
+      back. We will have to check every day 
 
 |=====================================================================|
 | For week starting    Mon   11/01/2021                               |
