--- a/roster.html
+++ b/roster.html
@@ -182,14 +182,12 @@ alt="shopify traffic stats"></a></div></noscript>
 
 B3 ROSTER
 
-<b>Status</b> -     Draft  
+<b>Status</b> -  <b><mark>>> Draft <<</mark></b>  
              Pending Confirmation
-          <b><mark>>> Final <<</mark></b>
+             Final
              <!-- ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #2 (Sun 10/01, 14:28)   [Final]<span id = "paraChangelog" style = "display:none">
-             #1 (Sun 10/01, 13:19)   [Pending Confirmation]
-                                     Draft #1</span>
+<b>Changelog</b> -  #1 (Sat 16/01, 07:48)   Draft #1</span>
 <!-- ABOVE.. col: 14 #x, 38 [x] --><span id = "mydivChangelog" style = "cursor:hand;color:royalblue" onclick = "expandContractChangelog();">             [+]</span>
 
 <b>Photos</b> -     <a href="https://www.flickr.com/gp/131712031@N02/Ft83xa">2014</a>, <a href="https://www.flickr.com/gp/131712031@N02/C314Q0">2015</a>, <a href="https://www.flickr.com/gp/131712031@N02/vtX8i9" target="_blank">2016</a>, <!--<a href="https://flic.kr/s/aHskUctFbt" target="_blank">2017</a>--><a href="https://unit-zero.myDS.me/photo/?t=Albums/album_62332032303137#Albums/album_62332032303137" target="_blank"><b>2017</b></a>, <a href="https://unit-zero.myDS.me/photo/?t=Albums/album_62332032303138#Albums/album_62332032303138" target="_blank"><b>2018</b></a>, <a href="https://unit-zero.myDS.me:5001/mo/sharing/BjnSIvuRa" target="_blank"><b>2019</b></a><span id="LastUpdatePhotos">(checking...)</span>
@@ -298,7 +296,6 @@ B3 ROSTER
 <b>THIS week's
 notes        </b><span id = "mydivNotes" style = "cursor:hand;color:royalblue" onclick = "expandContractNotes();">[+] </span> <span id="LastUpdateLegend"> (checking..) </span>
 <span id = "paraNotes" style = "display:none"></span>
-
 <!--
 Millie: Monday  CP % 0900-1430|5.5
 Bea:    Monday  CP % 0730-0900|1.5 -> 
@@ -334,29 +331,7 @@ Bea:    Monday  CP % 0730-0900|1.5 ->
 | d    0630-1500|      Mony      Mony      Mony      Mony     Mony    |
 | e    0700-1430|7.5   Yui       Sean      Sean      Yui      Bea     |
 |                                                                     |
-|=====================================================================|
--->
-Note: Tradies return on Wed, and office people also has been pushed 
-      back. We will have to check every day 
-
-|=====================================================================|
-| For week starting    Mon   11/01/2021                               |
-|=====================================================================|
-| Pos   Time           Mon       Tue       Wed       Thu      Fri     |
-|---------------------------------------------------------------------|
-|=====================================================================|
-|       CP                                                            |
-| a    0730-1530|      Nere      Nere      Nere      Nere     Nere    |
-| b    0730-1530|8.0   Millie    Millie    Millie    Bea      Sean    |
-| c    1030-1530|5.0   /         /         /         /        /       |
-|                                                                     |
-|       LC                                                            |
-| d    0630-1500|      Mony      Mony      Mony      Mony     Mony    |
-| e    0700-1430|7.5   Sean      Bea       Yui       Sean     Bea     |
-|                                                                     |
-|=====================================================================|
-
-
+|=====================================================================|-->
 |=====================================================================|
 | For week starting    Mon   18/01/2021    DRAFT                      |
 |=====================================================================|
