--- a/roster.html
+++ b/roster.html
@@ -187,7 +187,8 @@ B3 ROSTER
              Final
              <!-- ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #1 (Sat 16/01, 07:48)   Draft #1</span>
+<b>Changelog</b> -  #2 (Sat 16/01, 16:07)  Draft #2 
+             #1 (Sat 16/01, 07:48)  Draft #1</span>
 <!-- ABOVE.. col: 14 #x, 38 [x] --><span id = "mydivChangelog" style = "cursor:hand;color:royalblue" onclick = "expandContractChangelog();">             [+]</span>
 
 <b>Photos</b> -     <a href="https://www.flickr.com/gp/131712031@N02/Ft83xa">2014</a>, <a href="https://www.flickr.com/gp/131712031@N02/C314Q0">2015</a>, <a href="https://www.flickr.com/gp/131712031@N02/vtX8i9" target="_blank">2016</a>, <!--<a href="https://flic.kr/s/aHskUctFbt" target="_blank">2017</a>--><a href="https://unit-zero.myDS.me/photo/?t=Albums/album_62332032303137#Albums/album_62332032303137" target="_blank"><b>2017</b></a>, <a href="https://unit-zero.myDS.me/photo/?t=Albums/album_62332032303138#Albums/album_62332032303138" target="_blank"><b>2018</b></a>, <a href="https://unit-zero.myDS.me:5001/mo/sharing/BjnSIvuRa" target="_blank"><b>2019</b></a><span id="LastUpdatePhotos">(checking...)</span>
@@ -296,60 +297,40 @@ B3 ROSTER
 <b>THIS week's
 notes        </b><span id = "mydivNotes" style = "cursor:hand;color:royalblue" onclick = "expandContractNotes();">[+] </span> <span id="LastUpdateLegend"> (checking..) </span>
 <span id = "paraNotes" style = "display:none"></span>
-<!--
-Millie: Monday  CP % 0900-1430|5.5
-Bea:    Monday  CP % 0730-0900|1.5 -> 
-                LC % 0900-1500|6.0
 |=====================================================================|
-| For week starting    Mon   30/11/2020                               |
+| For week starting    Mon   18/01/2021                               |
 |=====================================================================|
 | Pos   Time           Mon       Tue       Wed       Thu      Fri     |
 |---------------------------------------------------------------------|
 |=====================================================================|
 |       CP                                                            |
 | a    0730-1530|      Nere      Nere      Nere      Nere     Nere    |
-| b    0730-1430|7.0   Millie%   Millie    Millie    Sean     Millie  |
-|                                                                     |
-|       LC                                                            |
-| c    0630-1500|      Mony      Mony      Mony      Mony     Mony    |
-| d    0700-1130|4.5   Sean      Sean      Sean      Bea      Bea     |
-| e    0900-1500|6.0   Bea%      Bea       Bea       Yui      Sean    |
-|                                                                     |
-|=====================================================================|
-|=====================================================================|
-| For week starting    Mon   04/01/2021                               |
-|=====================================================================|
-| Pos   Time           Mon       Tue       Wed       Thu      Fri     |
-|---------------------------------------------------------------------|
-|=====================================================================|
-|       CP                                                            |
-| a    0730-1530|      Nere      Nere      Nere      Nere     Nere    |
-| b    0730-1430|7.0   Millie    Millie    Millie    Bea      Millie  |
-| c    1030-1530|5.0   Sean      Bea       Bea       Lucy     Sean    |
-|                                                                     |
-|       LC                                                            |
-| d    0630-1500|      Mony      Mony      Mony      Mony     Mony    |
-| e    0700-1430|7.5   Yui       Sean      Sean      Yui      Bea     |
-|                                                                     |
-|=====================================================================|-->
-|=====================================================================|
-| For week starting    Mon   18/01/2021    DRAFT                      |
-|=====================================================================|
-| Pos   Time           Mon       Tue       Wed       Thu      Fri     |
-|---------------------------------------------------------------------|
-|=====================================================================|
-|       CP                                                            |
-| a    0730-1530|      Nere      Nere      Nere      Nere     Nere    |
-| b    0730-1530|8.0   Millie    Millie    Millie    Bea      Sean    |
+| b    0730-1530|8.0   Bea       Millie    Millie    Millie   Sean    |
 | c    1030-1530|5.0   /         /         /         /        /       |
 |                                                                     |
 |       LC                                                            |
 | d    0630-1500|      Mony      Mony      Mony      Mony     Mony    |
-| e    0700-1430|7.5   Sean      Bea       Yui       Sean     Bea     |
+| e    0700-1430|7.5   Sean      Bea       Lucy      Sean     Bea     |
 |                                                                     |
 |=====================================================================|
 
-
+Note: Sean goes back to school this week. She can only work Mon and Tue
+|=====================================================================|
+| For week starting    Mon   25/01/2021    DRAFT                      |
+|=====================================================================|
+| Pos   Time           Mon       Tue       Wed       Thu      Fri     |
+|---------------------------------------------------------------------|
+|=====================================================================|
+|       CP                                                            |
+| a    0730-1530|      Nere      Nere      Nere      Nere     Nere    |
+| b    0730-1530|8.0   Millie    Bea       Millie    Bea      Millie  |
+| c    1030-1530|5.0   /         /         /         /        /       |
+|                                                                     |
+|       LC                                                            |
+| d    0630-1500|      Mony      Mony      Mony      Mony     Mony    |
+| e    0700-1430|7.5   Sean      Sean      Lucy      Lucy     Bea     |
+|                                                                     |
+|=====================================================================|
 
 </em>
 </span></span></div>
