--- a/roster.html
+++ b/roster.html
@@ -187,7 +187,8 @@ B3 ROSTER
              Final
              <!-- ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #3 (Sun 17/01, 112:19)  [Pending Confirmation]
+<b>Changelog</b> -  #4 (Sun 17/01, 17:45)  Draft #3
+             #3 (Sun 17/01, 12:19)  [Pending Confirmation]
              #2 (Sat 16/01, 16:07)  Draft #2 
              #1 (Sat 16/01, 07:48)  Draft #1</span>
 <!-- ABOVE.. col: 14 #x, 38 [x] --><span id = "mydivChangelog" style = "cursor:hand;color:royalblue" onclick = "expandContractChangelog();">             [+]</span>
@@ -298,6 +299,10 @@ B3 ROSTER
 <b>THIS week's
 notes        </b><span id = "mydivNotes" style = "cursor:hand;color:royalblue" onclick = "expandContractNotes();">[+] </span> <span id="LastUpdateLegend"> (checking..) </span>
 <span id = "paraNotes" style = "display:none"></span>
+Wed   & Millie |CP 0730-1500 (7.5)
+      $ Bea  |LC 0700-1100 (4.0)
+        Lucy |LC 1030-1430 (4.0)
+             |CP 1430-1530 (1.0)
 |=====================================================================|
 | For week starting    Mon   18/01/2021                               |
 |=====================================================================|
@@ -306,12 +311,12 @@ notes        </b><span id = "mydivNotes" style = "cursor:hand;color:royalblue" o
 |=====================================================================|
 |       CP                                                            |
 | a    0730-1530|      Nere      Nere      Nere      Nere     Nere    |
-| b    0730-1530|8.0   Bea       Millie    Millie    Millie   Sean    |
+| b    0730-1530|8.0   Bea       Millie    Millie&   Millie   Sean    |
 | c    1030-1530|5.0   /         /         /         /        /       |
 |                                                                     |
 |       LC                                                            |
 | d    0630-1500|      Mony      Mony      Mony      Mony     Mony    |
-| e    0700-1430|7.5   Sean      Bea       Lucy      Sean     Bea     |
+| e    0700-1430|7.5   Sean      Bea     Bea/Lucy$   Sean     Bea     |
 |                                                                     |
 |=====================================================================|
 
