--- a/roster.html
+++ b/roster.html
@@ -311,7 +311,7 @@ Wed   & Millie |CP 0730-1500 (7.5)
 |=====================================================================|
 |       CP                                                            |
 | a    0730-1530|      Nere      Nere      Nere      Nere     Nere    |
-| b    0730-1530|8.0   Bea       Millie    Millie&   Millie   Sean    |
+| b    0730-1530|8.0   Bea      Millie  Mil-&/Lucy$  Millie   Sean    |
 | c    1030-1530|5.0   /         /         /         /        /       |
 |                                                                     |
 |       LC                                                            |
