--- a/roster.html
+++ b/roster.html
@@ -183,11 +183,12 @@ alt="shopify traffic stats"></a></div></noscript>
 B3 ROSTER
 
 <b>Status</b> -     Draft
-          <b><mark>>> Pending Confirmation <<</mark></b>  
-             Final
+             Pending Confirmation  
+          <b><mark>>> Final <<</mark></b>
              <!-- ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #4 (Sun 17/01, 17:45)  Draft #3
+<b>Changelog</b> -  #5 (Sun 17/01, 19:42)  [Final]<span id = "paraChangelog" style = "display:none">
+             #4 (Sun 17/01, 17:45)  Draft #3
              #3 (Sun 17/01, 12:19)  [Pending Confirmation]
              #2 (Sat 16/01, 16:07)  Draft #2 
              #1 (Sat 16/01, 07:48)  Draft #1</span>
@@ -300,9 +301,9 @@ B3 ROSTER
 notes        </b><span id = "mydivNotes" style = "cursor:hand;color:royalblue" onclick = "expandContractNotes();">[+] </span> <span id="LastUpdateLegend"> (checking..) </span>
 <span id = "paraNotes" style = "display:none"></span>
 Wed   & Millie |CP 0730-1500 (7.5)
-      $ Bea  |LC 0700-1100 (4.0)
-        Lucy |LC 1030-1430 (4.0)
-             |CP 1430-1530 (1.0)
+      $ Bea   |LC 0700-1100 (4.0)
+      ^ Lucy  |LC 1030-1430 (4.0)
+              |CP 1430-1530 (1.0)
 |=====================================================================|
 | For week starting    Mon   18/01/2021                               |
 |=====================================================================|
@@ -311,12 +312,12 @@ Wed   & Millie |CP 0730-1500 (7.5)
 |=====================================================================|
 |       CP                                                            |
 | a    0730-1530|      Nere      Nere      Nere      Nere     Nere    |
-| b    0730-1530|8.0   Bea      Millie  Mil-&/Lucy$  Millie   Sean    |
+| b    0730-1530|8.0   Bea      Millie  Mill&/Lucy^  Millie   Sean    |
 | c    1030-1530|5.0   /         /         /         /        /       |
 |                                                                     |
 |       LC                                                            |
 | d    0630-1500|      Mony      Mony      Mony      Mony     Mony    |
-| e    0700-1430|7.5   Sean      Bea     Bea/Lucy$   Sean     Bea     |
+| e    0700-1430|7.5   Sean      Bea     Bea$/Lucy^  Sean     Bea     |
 |                                                                     |
 |=====================================================================|
 
