--- a/roster.html
+++ b/roster.html
@@ -187,7 +187,8 @@ B3 ROSTER
           <b><mark>>> Final <<</mark></b>
              <!-- ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #5 (Sun 17/01, 19:42)  [Final]<span id = "paraChangelog" style = "display:none">
+<b>Changelog</b> -  #6 (Thu 21/01, 19:45)  Nere KO. Fri changes for all
+             #5 (Sun 17/01, 19:42)  [Final]<span id = "paraChangelog" style = "display:none">
              #4 (Sun 17/01, 17:45)  Draft #3
              #3 (Sun 17/01, 12:19)  [Pending Confirmation]
              #2 (Sat 16/01, 16:07)  Draft #2 
@@ -304,6 +305,11 @@ Wed   & Millie |CP 0730-1500 (7.5)
       $ Bea   |LC 0700-1200 (5.0)
       ^ Lucy  |LC 1030-1430 (4.0)
               |CP 1430-1530 (1.0)
+Fri   # Millie |LC 0530-0730 (2.0)
+               |CP 0730-1530 (8.0)
+      # Sean  |LC 0530-0730 (2.0)
+              |CP 0730-1530 (8.0)
+      + Bea    |LC 0630-1430 (8.0)
 |=====================================================================|
 | For week starting    Mon   18/01/2021                               |
 |=====================================================================|
@@ -311,8 +317,8 @@ Wed   & Millie |CP 0730-1500 (7.5)
 |---------------------------------------------------------------------|
 |=====================================================================|
 |       CP                                                            |
-| a    0730-1530|      Nere      Nere      Nere      Nere     Nere    |
-| b    0730-1530|8.0   Bea      Millie  Mill&/Lucy^  Millie   Sean    |
+| a    0730-1530|      Nere      Nere      Nere      Nere <del>Nere</del>Millie# |
+| b    0730-1530|8.0   Bea      Millie  Mill&/Lucy^  Millie   Sean#   |
 | c    1030-1530|5.0   /         /         /         /        /       |
 |                                                                     |
 |       LC                                                            |
