--- a/roster.html
+++ b/roster.html
@@ -305,6 +305,10 @@ Wed   & Millie |CP 0730-1500 (7.5)
       $ Bea   |LC 0700-1200 (5.0)
       ^ Lucy  |LC 1030-1430 (4.0)
               |CP 1430-1530 (1.0)
+
+Thu   @ Millie |CP 0700-1530 (8.5)
+      @ Sean  |CP 0700-1530 (8.5) 
+
 Fri   # Millie |LC 0530-0730 (2.0)
                |CP 0730-1530 (8.0)
       # Sean  |LC 0530-0730 (2.0)
@@ -317,13 +321,13 @@ Fri   # Millie |LC 0530-0730 (2.0)
 |---------------------------------------------------------------------|
 |=====================================================================|
 |       CP                                                            |
-| a    0730-1530|      Nere      Nere      Nere      Nere <del>Nere</del>Millie# |
-| b    0730-1530|8.0   Bea      Millie  Mill&/Lucy^  Millie   Sean#   |
+| a    0730-1530|      Nere      Nere      Nere    Sean@  <del>Nere</del>Millie# |
+| b    0730-1530|8.0   Bea      Millie  Mill&/Lucy^  Millie@  Sean#   |
 | c    1030-1530|5.0   /         /         /         /        /       |
 |                                                                     |
 |       LC                                                            |
 | d    0630-1500|      Mony      Mony      Mony      Mony     Mony    |
-| e    0700-1430|7.5   Sean      Bea     Bea$/Lucy^  Sean     Bea     |
+| e    0700-1430|7.5   Sean      Bea     Bea$/Lucy^  Lucy     Bea     |
 |                                                                     |
 |=====================================================================|
 
