--- a/roster.html
+++ b/roster.html
@@ -349,6 +349,12 @@ Note: Sean goes back to school this week. She can only work Mon and Tue
 |                                                                     |
 |=====================================================================|
 
+<!--
+Millie 34 - 23.5 = 10.5
+Sean 26- 23.5    = 2.5
+Bea 28.5- 23.5   = 5
+-->
+
 </em>
 </span></span></div>
 </pre>
