--- a/roster.html
+++ b/roster.html
@@ -339,20 +339,20 @@ Note: Sean goes back to school this week. She can only work Mon and Tue
 |---------------------------------------------------------------------|
 |=====================================================================|
 |       CP                                                            |
-| a    0730-1530|      Nere      Nere      Nere      Nere     Nere    |
-| b    0730-1530|8.0   Millie    Bea       Millie    Bea      Millie  |
+| a    0730-1530|      Nere      /         Nere      Nere     Nere    |
+| b    0730-1530|8.0   Sean      /         Millie    Bea      Millie  |
 | c    1030-1530|5.0   /         /         /         /        /       |
 |                                                                     |
 |       LC                                                            |
-| d    0630-1500|      Mony      Mony      Mony      Mony     Mony    |
-| e    0700-1430|7.5   Sean      Sean      Lucy      Lucy     Bea     |
+| d    0630-1500|      /         /         Mony      Mony     Mony    |
+| e    0700-1430|7.5   /         /         Lucy      Lucy     Bea     |
 |                                                                     |
 |=====================================================================|
 
 <!--
-Millie 34 - 23.5 = 10.5
-Sean 26- 23.5    = 2.5
-Bea 28.5- 23.5   = 5
+Millie 34 - 23.5 = 10.5 (220.5)
+Sean 26- 23.5    = 2.5  (52.5)
+Bea 28.5- 23.5   = 5    (105)
 -->
 
 </em>
