--- a/roster.html
+++ b/roster.html
@@ -345,7 +345,7 @@ Note: Sean goes back to school this week. She can only work Mon and Tue
 |                                                                     |
 |       LC                                                            |
 | d    0630-1500|      /         /         Mony      Mony     Mony    |
-| e    0700-1430|7.5   /         /         Lucy      Lucy     Bea     |
+| e    0700-1430|7.5   /         /         Bea       Lucy     Bea     |
 |                                                                     |
 |=====================================================================|
 
