--- a/roster.html
+++ b/roster.html
@@ -183,16 +183,12 @@ alt="shopify traffic stats"></a></div></noscript>
 B3 ROSTER
 
 <b>Status</b> -     Draft
-             Pending Confirmation  
-          <b><mark>>> Final <<</mark></b>
+          <b><mark>>> Pending Confirmation <<</mark></b>
+             Final
              <!-- ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #6 (Thu 21/01, 19:45)  Nere KO. Fri changes for all
-             #5 (Sun 17/01, 19:42)  [Final]<span id = "paraChangelog" style = "display:none">
-             #4 (Sun 17/01, 17:45)  Draft #3
-             #3 (Sun 17/01, 12:19)  [Pending Confirmation]
-             #2 (Sat 16/01, 16:07)  Draft #2 
-             #1 (Sat 16/01, 07:48)  Draft #1</span>
+<b>Changelog</b> -  #1 (Sun 24/01, 08:37)   [Pending Confirmation]
+                                     Draft #1</span>
 <!-- ABOVE.. col: 14 #x, 38 [x] --><span id = "mydivChangelog" style = "cursor:hand;color:royalblue" onclick = "expandContractChangelog();">             [+]</span>
 
 <b>Photos</b> -     <a href="https://www.flickr.com/gp/131712031@N02/Ft83xa">2014</a>, <a href="https://www.flickr.com/gp/131712031@N02/C314Q0">2015</a>, <a href="https://www.flickr.com/gp/131712031@N02/vtX8i9" target="_blank">2016</a>, <!--<a href="https://flic.kr/s/aHskUctFbt" target="_blank">2017</a>--><a href="https://unit-zero.myDS.me/photo/?t=Albums/album_62332032303137#Albums/album_62332032303137" target="_blank"><b>2017</b></a>, <a href="https://unit-zero.myDS.me/photo/?t=Albums/album_62332032303138#Albums/album_62332032303138" target="_blank"><b>2018</b></a>, <a href="https://unit-zero.myDS.me:5001/mo/sharing/BjnSIvuRa" target="_blank"><b>2019</b></a><span id="LastUpdatePhotos">(checking...)</span>
@@ -301,6 +297,10 @@ B3 ROSTER
 <b>THIS week's
 notes        </b><span id = "mydivNotes" style = "cursor:hand;color:royalblue" onclick = "expandContractNotes();">[+] </span> <span id="LastUpdateLegend"> (checking..) </span>
 <span id = "paraNotes" style = "display:none"></span>
+
+_______________________________________________________________________
+------------------ start PREV week ------------------------------------
+
 Wed   & Millie |CP 0730-1500 (7.5)
       $ Bea   |LC 0700-1200 (5.0)
       ^ Lucy  |LC 1030-1430 (4.0)
@@ -330,29 +330,32 @@ Fri   # Millie |LC 0530-0730 (2.0)
 | e    0700-1430|7.5   Sean      Bea     Bea$/Lucy^  Lucy     Bea     |
 |                                                                     |
 |=====================================================================|
+_______________________________________________________________________
+--------------------- end PREV week ----------------------------------- 
+
 
 Note: Sean goes back to school this week. She can only work Mon and Tue
 |=====================================================================|
-| For week starting    Mon   25/01/2021    DRAFT                      |
+| For week starting    Mon   25/01/2021                               |
 |=====================================================================|
 | Pos   Time           Mon       Tue       Wed       Thu      Fri     |
 |---------------------------------------------------------------------|
 |=====================================================================|
 |       CP                                                            |
-| a    0730-1530|      Nere      /         Nere      Nere     Nere    |
-| b    0730-1530|8.0   Sean      /         Millie    Bea      Millie  |
+| a    0730-1530|      Mony      /         Bea       Nere     Nere    |
+| b    0730-1530|8.0   Sean      /         Millie    Millie   Millie  |
 | c    1030-1530|5.0   /         /         /         /        /       |
 |                                                                     |
 |       LC                                                            |
 | d    0630-1500|      /         /         Mony      Mony     Mony    |
-| e    0700-1430|7.5   /         /         Bea       Lucy     Bea     |
+| e    0700-1430|7.5   /         /         Lucy      Bea      Bea     |
 |                                                                     |
 |=====================================================================|
 
 <!--
-Millie 34 - 23.5 = 10.5 (220.5)
-Sean 26- 23.5    = 2.5  (52.5)
-Bea 28.5- 23.5   = 5    (105)
+Millie 34 - 23 = 11 (231)
+Sean 26- 23    = 3  (63)
+Bea 28.5- 23   = 5.5 (115.5)
 -->
 
 </em>
