--- a/roster.html
+++ b/roster.html
@@ -342,13 +342,13 @@ Note: Sean goes back to school this week. She can only work Mon and Tue
 |---------------------------------------------------------------------|
 |=====================================================================|
 |       CP                                                            |
-| a    0730-1530|      Mony      /         Bea       Nere     Nere    |
+| a    0730-1530|      Mony      /       Nere+Bea   Nere+Bea   Nere   |
 | b    0730-1530|8.0   Sean      /         Millie    Millie   Millie  |
 | c    1030-1530|5.0   /         /         /         /        /       |
 |                                                                     |
 |       LC                                                            |
 | d    0630-1500|      /         /         Mony      Mony     Mony    |
-| e    0700-1430|7.5   /         /         Lucy      Bea      Bea     |
+| e    0700-1430|7.5   /         /         Lucy      Lucy     Bea     |
 |                                                                     |
 |=====================================================================|
 
