--- a/roster.html
+++ b/roster.html
@@ -334,6 +334,26 @@ _______________________________________________________________________
 --------------------- end PREV week ----------------------------------- 
 
 
+Mon   ^ Sean  |LC 0630-1530 (9.0)
+
+Wed   % Nere  |   @ 0.25x speed
+      % Bea   |LC 0600-0930 (3.5)
+              |CP 0930-1530 (6.0)
+      % Lucy   |LC 0930-1430 (5.0)
+
+      ^ Millie |LC 0630-1530 (9.0)
+
+Thu   # Nere  |   @ 0.25x speed
+      # Bea   |LC 0600-0930 (3.5)
+              |CP 0930-1530 (6.0)
+      # Lucy   |LC 0930-1430 (5.0)
+
+      ^ Millie |LC 0630-1530 (9.0)
+
+Fri   ^ Millie |LC 0630-1530 (9.0)
+
+      $ Bea   |LC 0630-1430 (8.0)
+
 Note: Sean goes back to school this week. She can only work Mon and Tue
 |=====================================================================|
 | For week starting    Mon   25/01/2021                               |
@@ -342,13 +362,13 @@ Note: Sean goes back to school this week. She can only work Mon and Tue
 |---------------------------------------------------------------------|
 |=====================================================================|
 |       CP                                                            |
-| a    0730-1530|      Mony      /       Nere+Bea   Nere+Bea   Nere   |
-| b    0730-1530|8.0   Sean      /         Millie    Millie   Millie  |
+| a    0730-1530|      Mony      /       Nere+Bea%  Nere+Bea#  Nere   |
+| b    0730-1530|8.0   Sean^     /         Millie^   Millie^  Millie^ |
 | c    1030-1530|5.0   /         /         /         /        /       |
 |                                                                     |
 |       LC                                                            |
 | d    0630-1500|      /         /         Mony      Mony     Mony    |
-| e    0700-1430|7.5   /         /         Lucy      Lucy     Bea     |
+| e    0700-1430|7.5   /         /     Bea/Lucy%  Bea/Lucy#   Bea$    |
 |                                                                     |
 |=====================================================================|
 
