--- a/roster.html
+++ b/roster.html
@@ -187,7 +187,8 @@ B3 ROSTER
              Final
              <!-- ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #2 (Sun 24/01, 15:10)   Draft #2
+<b>Changelog</b> -  #3 (Sun 24/01, 16:32)   Changes for Wed
+             #2 (Sun 24/01, 15:10)   Draft #2
              #1 (Sun 24/01, 08:37)   [Pending Confirmation]
                                      Draft #1</span>
 <!-- ABOVE.. col: 14 #x, 38 [x] --><span id = "mydivChangelog" style = "cursor:hand;color:royalblue" onclick = "expandContractChangelog();">             [+]</span>
@@ -301,25 +302,20 @@ notes        </b><span id = "mydivNotes" style = "cursor:hand;color:royalblue" o
 Mon   ^ Sean  |LC 0630-0730 (1.0)
               |CP 0730-1530 (8.0)
 
-Wed   % Nere  |@ 0.25x speed
-      % Bea   |LC 0600-0930 (3.5)
-              |CP 0930-1530 (6.0)
-      % Lucy   |LC 0930-1430 (5.0)
-
+Wed   % Bea   |LC 0600-1430 (8.5)      
       ^ Millie |LC 0630-1530 (9.0)
 
-Thu   # Nere  |@ 0.25x speed
-      # Bea   |LC 0600-0930 (3.5)
+Thu   # Bea   |LC 0600-0930 (3.5)
               |CP 0930-1530 (6.0)
       # Lucy   |LC 0930-1430 (5.0)
-
       ^ Millie |LC 0630-1530 (9.0)
 
 Fri   ^ Millie |LC 0630-1530 (9.0)
-
       $ Bea   |LC 0630-1430 (8.0)
 
-Note: Sean goes back to school this week. She can only work Mon and Tue
+Note: Sean goes back to school this week, 
+      she can only work Mon and Tue
+Note: Nere 0.25x speed
 |=====================================================================|
 | For week starting    Mon   25/01/2021                               |
 |=====================================================================|
@@ -327,13 +323,13 @@ Note: Sean goes back to school this week. She can only work Mon and Tue
 |---------------------------------------------------------------------|
 |=====================================================================|
 |       CP                                                            |
-| a    0730-1530|      Mony      /       Nere+Bea%  Nere+Bea#  Nere   |
+| a    0730-1530|      Mony      /         Nere     Nere+Bea#  Nere   |
 | b    0730-1530|8.0   Sean^     /         Millie^   Millie^  Millie^ |
 | c    1030-1530|5.0   /         /         /         /        /       |
 |                                                                     |
 |       LC                                                            |
 | d    0630-1500|      /         /         Mony      Mony     Mony    |
-| e    0700-1430|7.5   /         /     Bea/Lucy%  Bea/Lucy#   Bea$    |
+| e    0700-1430|7.5   /         /         Bea     Bea/Lucy#  Bea$    |
 |                                                                     |
 |=====================================================================|
 
