--- a/roster.html
+++ b/roster.html
@@ -183,11 +183,12 @@ alt="shopify traffic stats"></a></div></noscript>
 B3 ROSTER
 
 <b>Status</b> -     Draft
-          <b><mark>>> Pending Confirmation <<</mark></b>
-             Final
+             Pending Confirmation
+          <b><mark>>> Final <<</mark></b>
              <!-- ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #3 (Sun 24/01, 16:32)   Changes for Wed
+<b>Changelog</b> -  #4 (Sun 24/01, 17:25)   [Final]<span id = "paraChangelog" style = "display:none">
+             #3 (Sun 24/01, 16:32)   Changes for Wed
              #2 (Sun 24/01, 15:10)   Draft #2
              #1 (Sun 24/01, 08:37)   [Pending Confirmation]
                                      Draft #1</span>
@@ -332,8 +333,7 @@ Note: Nere 0.25x speed
 | e    0700-1430|7.5   /         /         Bea     Bea/Lucy#  Bea$    |
 |                                                                     |
 |=====================================================================|
-
-
+<!--
 
 _______________________________________________________________________
 ------------------ start PREV week ------------------------------------
@@ -372,7 +372,7 @@ _______________________________________________________________________
 
 
 
-<!--
+--><!--
 Millie 34 - 23 = 11 (231)
 Sean 26- 23    = 3  (63)
 Bea 28.5- 23   = 5.5 (115.5)
