--- a/roster.html
+++ b/roster.html
@@ -187,7 +187,9 @@ B3 ROSTER
           <b><mark>>> Final <<</mark></b>
              <!-- ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #4 (Sun 24/01, 17:25)   [Final]<span id = "paraChangelog" style = "display:none">
+<b>Changelog</b> -  #5 (Sun 24/01, 20:14)   Changes for Bea: Wed start time
+                                                 Bea: Thu start and end time
+             #4 (Sun 24/01, 17:25)   [Final]<span id = "paraChangelog" style = "display:none">
              #3 (Sun 24/01, 16:32)   Changes for Wed
              #2 (Sun 24/01, 15:10)   Draft #2
              #1 (Sun 24/01, 08:37)   [Pending Confirmation]
@@ -303,11 +305,11 @@ notes        </b><span id = "mydivNotes" style = "cursor:hand;color:royalblue" o
 Mon   ^ Sean  |LC 0630-0730 (1.0)
               |CP 0730-1530 (8.0)
 
-Wed   % Bea   |LC 0600-1430 (8.5)      
+Wed   % Bea   |LC 0630-1430 (8.0)      
       ^ Millie |LC 0630-1530 (9.0)
 
-Thu   # Bea   |LC 0600-0930 (3.5)
-              |CP 0930-1530 (6.0)
+Thu   # Bea   |LC 0630-0930 (3.0)
+              |CP 0930-1430 (5.0)
       # Lucy   |LC 0930-1430 (5.0)
       ^ Millie |LC 0630-1530 (9.0)
 
