--- a/roster.html
+++ b/roster.html
@@ -187,8 +187,8 @@ B3 ROSTER
           <b><mark>>> Final <<</mark></b>
              <!-- ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #5 (Sun 24/01, 20:14)   Changes for Bea: Wed start time
-                                                 Bea: Thu start and end time
+<b>Changelog</b> -  #5 (Sun 24/01, 20:14)   Changes Bea: Wed start time
+                                             Bea: Thu start/end time
              #4 (Sun 24/01, 17:25)   [Final]<span id = "paraChangelog" style = "display:none">
              #3 (Sun 24/01, 16:32)   Changes for Wed
              #2 (Sun 24/01, 15:10)   Draft #2
