--- a/roster.html
+++ b/roster.html
@@ -183,16 +183,11 @@ alt="shopify traffic stats"></a></div></noscript>
 B3 ROSTER
 
 <b>Status</b> -     Draft
-             Pending Confirmation
-          <b><mark>>> Final <<</mark></b>
+          <b><mark>>> Pending Confirmation <<</mark></b>
+             Final
              <!-- ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #5 (Sun 24/01, 20:14)   Changes Bea: Wed start time
-                                             Bea: Thu start/end time
-             #4 (Sun 24/01, 17:25)   [Final]<span id = "paraChangelog" style = "display:none">
-             #3 (Sun 24/01, 16:32)   Changes for Wed
-             #2 (Sun 24/01, 15:10)   Draft #2
-             #1 (Sun 24/01, 08:37)   [Pending Confirmation]
+<b>Changelog</b> -  #1 (Sun 31/01, 06:29)   [Pending Confirmation]
                                      Draft #1</span>
 <!-- ABOVE.. col: 14 #x, 38 [x] --><span id = "mydivChangelog" style = "cursor:hand;color:royalblue" onclick = "expandContractChangelog();">             [+]</span>
 
@@ -302,7 +297,7 @@ B3 ROSTER
 <b>THIS week's
 notes        </b><span id = "mydivNotes" style = "cursor:hand;color:royalblue" onclick = "expandContractNotes();">[+] </span> <span id="LastUpdateLegend"> (checking..) </span>
 <span id = "paraNotes" style = "display:none"></span>
-Mon   ^ Sean  |LC 0630-0730 (1.0)
+<!--Mon   ^ Sean  |LC 0630-0730 (1.0)
               |CP 0730-1530 (8.0)
 
 Wed   % Bea   |LC 0630-1430 (8.0)      
@@ -319,7 +314,7 @@ Fri   ^ Millie |LC 0630-1530 (9.0)
 Note: Sean goes back to school this week, 
       she can only work Mon and Tue
 Note: Nere 0.25x speed
-|=====================================================================|
+-->|=====================================================================|
 | For week starting    Mon   25/01/2021                               |
 |=====================================================================|
 | Pos   Time           Mon       Tue       Wed       Thu      Fri     |
@@ -335,7 +330,43 @@ Note: Nere 0.25x speed
 | e    0700-1430|7.5   /         /         Bea     Bea/Lucy#  Bea$    |
 |                                                                     |
 |=====================================================================|
+
+
+Wed   @  Millie  |CP 0730-1430 (7.0)
+      ^  Bea    |LC 0700-1100 (4.0)
+                |CP 1100-1530 (4.5)
+      * Lucy     |LC 0930-1430 (5.0)
+
+Thu   @  Millie  |CP 0730-1430 (7.0)
+      ^  Bea    |LC 0700-1100 (4.0)
+                |CP 1100-1530 (4.5)
+      * Lucy     |LC 0930-1430 (5.0)
+
+|=====================================================================|
+| For week starting    Mon   01/02/2021                               |
+|=====================================================================|
+| Pos   Time           Mon       Tue       Wed       Thu      Fri     |
+|---------------------------------------------------------------------|
+|=====================================================================|
+|       CP                                                            |
+| a    0730-1530|      Nere      Nere      Nere      Nere     Nere    |
+| b    0730-1530|8.0   Millie    Sean      Millie@   Millie@  Millie  |
+| c    1030-1530|5.0   /         /         Bea^      Bea^     /       |
+| tr   1030-1430|4.0   Pla       Pla       /         /        Pla     |
+|                                                                     |
+|       LC                                                            |
+| d    0630-1500|      Mony      Mony      Mony      Mony       Mony  |
+| e    0700-1430|7.5   Sean      Bea   Bea^/Lucy*  Bea^/Lucy*   Bea   |
+|                                                                     |
+|=====================================================================|
+
+
 <!--
+
+Millie 30
+Bea 32
+Sean 15.5
+Lucy 10
 
 _______________________________________________________________________
 ------------------ start PREV week ------------------------------------
