--- a/roster.html
+++ b/roster.html
@@ -314,7 +314,7 @@ Fri   ^ Millie |LC 0630-1530 (9.0)
 Note: Sean goes back to school this week, 
       she can only work Mon and Tue
 Note: Nere 0.25x speed
--->|=====================================================================|
+|=====================================================================|
 | For week starting    Mon   25/01/2021                               |
 |=====================================================================|
 | Pos   Time           Mon       Tue       Wed       Thu      Fri     |
@@ -332,7 +332,7 @@ Note: Nere 0.25x speed
 |=====================================================================|
 
 
-Wed   @  Millie  |CP 0730-1430 (7.0)
+-->Wed   @  Millie  |CP 0730-1430 (7.0)
       ^  Bea    |LC 0700-1100 (4.0)
                 |CP 1100-1530 (4.5)
       * Lucy     |LC 0930-1430 (5.0)
