--- a/roster.html
+++ b/roster.html
@@ -342,23 +342,40 @@ Thu   @  Millie  |CP 0730-1430 (7.0)
                 |CP 1100-1530 (4.5)
       * Lucy     |LC 0930-1430 (5.0)
 
-|=====================================================================|
-| For week starting    Mon   01/02/2021                               |
-|=====================================================================|
-| Pos   Time           Mon       Tue       Wed       Thu      Fri     |
-|---------------------------------------------------------------------|
-|=====================================================================|
-|       CP                                                            |
-| a    0730-1530|      Nere      Nere      Nere      Nere     Nere    |
-| b    0730-1530|8.0   Millie    Sean      Millie@   Millie@  Millie  |
-| c    1030-1530|5.0   /         /         Bea^      Bea^     /       |
-| tr   1030-1430|4.0   Pla       Pla       /         /        Pla     |
-|                                                                     |
-|       LC                                                            |
-| d    0630-1500|      Mony      Mony      Mony      Mony       Mony  |
-| e    0700-1430|7.5   Sean      Bea   Bea^/Lucy*  Bea^/Lucy*   Bea   |
-|                                                                     |
-|=====================================================================|
+|==========================================================================|
+| For week starting    Mon   01/02/2021                                    |
+|==========================================================================|
+| Pos   Time           Mon        Tue        Wed        Thu        Fri     |
+|--------------------------------------------------------------------------|
+|==========================================================================|
+|       CP                                                                 |
+| a    0730-1530|      Nere       Nere       Nere       Nere       Nere    |
+| b    0730-1530|8.0   Millie     Sean       Millie@    Millie@    Millie  |
+| c    1030-1530|5.0   /          /          Bea^       Bea^       /       |
+| tr   1030-1430|4.0   Pla        Pla        /          /          Pla     |
+|                                                                          |
+|       LC                                                                 |
+| d    0630-1500|      Mony       Mony       Mony       Mony       Mony    |
+| e    0700-1430|7.5   Sean       Bea    Bea^/Lucy*   Bea^/Lucy*   Bea     |
+|                                                                          |
+|==========================================================================|
+
+|==========================================================================|
+| For week starting    Mon   08/02/2021     DRAFT                          |
+|==========================================================================|
+| Pos   Time           Mon        Tue        Wed        Thu        Fri     |
+|--------------------------------------------------------------------------|
+|==========================================================================|
+|       CP                                                                 |
+| a    0730-1530|      Nere       Nere       Nere       Nere       Nere    |
+| b    0730-1530|8.0   Millie     Sean       Millie@    Millie@    Millie  |
+| c    1030-1530|5.0   /          /          Bea^       Bea^       /       |
+|                                                                          |
+|       LC                                                                 |
+| d    0630-1500|      Mony       Mony       Mony       Mony       Mony    |
+| e    0700-1430|7.5   Sean       Bea    Bea^/Lucy*   Bea^/Lucy*   Bea     |
+|                                                                          |
+|==========================================================================|
 
 
 <!--
