--- a/roster.html
+++ b/roster.html
@@ -187,7 +187,8 @@ B3 ROSTER
              Final
              <!-- ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #1 (Sun 31/01, 06:29)   [Pending Confirmation]
+<b>Changelog</b> -  #2 (Sun 31/01, 14:57)   Draft #2
+             #1 (Sun 31/01, 06:29)   [Pending Confirmation]
                                      Draft #1</span>
 <!-- ABOVE.. col: 14 #x, 38 [x] --><span id = "mydivChangelog" style = "cursor:hand;color:royalblue" onclick = "expandContractChangelog();">             [+]</span>
 
@@ -297,50 +298,29 @@ B3 ROSTER
 <b>THIS week's
 notes        </b><span id = "mydivNotes" style = "cursor:hand;color:royalblue" onclick = "expandContractNotes();">[+] </span> <span id="LastUpdateLegend"> (checking..) </span>
 <span id = "paraNotes" style = "display:none"></span>
-<!--Mon   ^ Sean  |LC 0630-0730 (1.0)
-              |CP 0730-1530 (8.0)
+Mon  -  Millie  |LC 0700-0730 (0.5)
+                |CP 0730-1430 (7.0)
+     +  Sean   |LC 0630-1430 (8.0)
+               |CP 1430-1530 (1.0)
 
-Wed   % Bea   |LC 0630-1430 (8.0)      
-      ^ Millie |LC 0630-1530 (9.0)
+Tue  -  Bea     |LC 0700-0730 (0.5)
+                |CP 0730-1430 (7.0)
+     +  Sean   |LC 0630-1430 (8.0)
+               |CP 1430-1530 (1.0)
 
-Thu   # Bea   |LC 0630-0930 (3.0)
-              |CP 0930-1430 (5.0)
-      # Lucy   |LC 0930-1430 (5.0)
-      ^ Millie |LC 0630-1530 (9.0)
+Wed  -  Millie  |LC 0700-0730 (0.5)
+                |CP 0730-1430 (7.0)
+     ^  Bea    |0630-1100 (4.5)
+               |1100-1400 (3.0)
+     *  Lucy    |LC 0930-1430 (5.0)
+                |CP 1430-1530 (1.0)
 
-Fri   ^ Millie |LC 0630-1530 (9.0)
-      $ Bea   |LC 0630-1430 (8.0)
-
-Note: Sean goes back to school this week, 
-      she can only work Mon and Tue
-Note: Nere 0.25x speed
-|=====================================================================|
-| For week starting    Mon   25/01/2021                               |
-|=====================================================================|
-| Pos   Time           Mon       Tue       Wed       Thu      Fri     |
-|---------------------------------------------------------------------|
-|=====================================================================|
-|       CP                                                            |
-| a    0730-1530|      Mony      /         Nere     Nere+Bea#  Nere   |
-| b    0730-1530|8.0   Sean^     /         Millie^   Millie^  Millie^ |
-| c    1030-1530|5.0   /         /         /         /        /       |
-|                                                                     |
-|       LC                                                            |
-| d    0630-1500|      /         /         Mony      Mony     Mony    |
-| e    0700-1430|7.5   /         /         Bea     Bea/Lucy#  Bea$    |
-|                                                                     |
-|=====================================================================|
-
-
--->Wed   @  Millie  |CP 0730-1430 (7.0)
-      ^  Bea    |LC 0700-1100 (4.0)
-                |CP 1100-1530 (4.5)
-      * Lucy     |LC 0930-1430 (5.0)
-
-Thu   @  Millie  |CP 0730-1430 (7.0)
-      ^  Bea    |LC 0700-1100 (4.0)
-                |CP 1100-1530 (4.5)
-      * Lucy     |LC 0930-1430 (5.0)
+Thu  -  Millie  |LC 0700-0730 (0.5)
+                |CP 0730-1430 (7.0)
+     ^  Bea    |0630-1100 (4.5)
+               |1100-1400 (3.0)
+     *  Lucy    |LC 0930-1430 (5.0)
+                |CP 1430-1530 (1.0)
 
 |==========================================================================|
 | For week starting    Mon   01/02/2021                                    |
@@ -350,40 +330,22 @@ Thu   @  Millie  |CP 0730-1430 (7.0)
 |==========================================================================|
 |       CP                                                                 |
 | a    0730-1530|      Nere       Nere       Nere       Nere       Nere    |
-| b    0730-1530|8.0   Millie     Sean       Millie@    Millie@    Millie  |
-| c    1030-1530|5.0   /          /          Bea^       Bea^       /       |
+| b    0700-1530|8.5   Millie-    Bea-       Millie-    Millie-    Millie  |
+| c    1100-1400|3.0   /          /          Bea^       Bea^       /       |
 | tr   1030-1430|4.0   Pla        Pla        /          /          Pla     |
 |                                                                          |
 |       LC                                                                 |
 | d    0630-1500|      Mony       Mony       Mony       Mony       Mony    |
-| e    0700-1430|7.5   Sean       Bea    Bea^/Lucy*   Bea^/Lucy*   Bea     |
+| e    0630-1430|8.0   Sean+      Sean+   Bea^/Lucy*   Bea^/Lucy*  Bea     |
 |                                                                          |
 |==========================================================================|
-
-|==========================================================================|
-| For week starting    Mon   08/02/2021     DRAFT                          |
-|==========================================================================|
-| Pos   Time           Mon        Tue        Wed        Thu        Fri     |
-|--------------------------------------------------------------------------|
-|==========================================================================|
-|       CP                                                                 |
-| a    0730-1530|      Nere       Nere       Nere       Nere       Nere    |
-| b    0730-1530|8.0   Millie     Sean       Millie@    Millie@    Millie  |
-| c    1030-1530|5.0   /          /          Bea^       Bea^       /       |
-|                                                                          |
-|       LC                                                                 |
-| d    0630-1500|      Mony       Mony       Mony       Mony       Mony    |
-| e    0700-1430|7.5   Sean       Bea    Bea^/Lucy*   Bea^/Lucy*   Bea     |
-|                                                                          |
-|==========================================================================|
-
 
 <!--
 
-Millie 30
-Bea 32
-Sean 15.5
-Lucy 10
+Millie 
+Bea 
+Sean 
+Lucy 
 
 _______________________________________________________________________
 ------------------ start PREV week ------------------------------------
