--- a/roster.html
+++ b/roster.html
@@ -298,29 +298,29 @@ B3 ROSTER
 <b>THIS week's
 notes        </b><span id = "mydivNotes" style = "cursor:hand;color:royalblue" onclick = "expandContractNotes();">[+] </span> <span id="LastUpdateLegend"> (checking..) </span>
 <span id = "paraNotes" style = "display:none"></span>
-Mon  -  Millie  |LC 0700-0730 (0.5)
-                |CP 0730-1430 (7.0)
+Mon  -  Millie   |LC 0700-0730 (0.5)
+                 |CP 0730-1430 (7.0)
      +  Sean   |LC 0630-1430 (8.0)
                |CP 1430-1530 (1.0)
 
-Tue  -  Bea     |LC 0700-0730 (0.5)
-                |CP 0730-1430 (7.0)
+Tue  -  Bea      |LC 0700-0730 (0.5)
+                 |CP 0730-1430 (7.0)
      +  Sean   |LC 0630-1430 (8.0)
                |CP 1430-1530 (1.0)
 
-Wed  -  Millie  |LC 0700-0730 (0.5)
-                |CP 0730-1430 (7.0)
-     ^  Bea    |0630-1100 (4.5)
-               |1100-1400 (3.0)
-     *  Lucy    |LC 0930-1430 (5.0)
-                |CP 1430-1530 (1.0)
+Wed  -  Millie   |LC 0700-0730 (0.5)
+                 |CP 0730-1430 (7.0)
+     ^  Bea    |LC 0630-1100 (4.5)
+               |CP 1100-1400 (3.0)
+     *  Lucy     |LC 0930-1430 (5.0)
+                 |CP 1430-1530 (1.0)
 
-Thu  -  Millie  |LC 0700-0730 (0.5)
-                |CP 0730-1430 (7.0)
-     ^  Bea    |0630-1100 (4.5)
-               |1100-1400 (3.0)
-     *  Lucy    |LC 0930-1430 (5.0)
-                |CP 1430-1530 (1.0)
+Thu  -  Millie   |LC 0700-0730 (0.5)
+                 |CP 0730-1430 (7.0)
+     ^  Bea    |LC 0630-1100 (4.5)
+               |CP 1100-1400 (3.0)
+     *  Lucy     |LC 0930-1430 (5.0)
+                 |CP 1430-1530 (1.0)
 
 |==========================================================================|
 | For week starting    Mon   01/02/2021                                    |
